04_TAD_simples/TAD_02/Resultados/JoaoHenrique/eleitor/result_compilation.txt
Resultados/JoaoHenrique/eleitor/candidato.c: In function ‘ImprimeCandidato’:
Resultados/JoaoHenrique/eleitor/candidato.c:116:39: warning: unknown conversion type character ‘\x0a’ in format [-Wformat=]
  116 |     printf("%s (%s), %d voto(s), %2.f%\n", candidato.nome, candidato.partido, candidato.votos, percentualVotos);
      |                                       ^~
Resultados/JoaoHenrique/eleitor/eleicao.c: In function ‘InicializaEleicao’:
Resultados/JoaoHenrique/eleitor/eleicao.c:28:13: error: too few arguments to function ‘CriaCandidato’
   28 |             CriaCandidato()
      |             ^~~~~~~~~~~~~
In file included from Resultados/JoaoHenrique/eleitor/eleicao.h:4,
                 from Resultados/JoaoHenrique/eleitor/eleicao.c:2:
Resultados/JoaoHenrique/eleitor/candidato.h:20:12: note: declared here
   20 | tCandidato CriaCandidato(char *nome, char *partido, char cargo, int id);
      |            ^~~~~~~~~~~~~
Resultados/JoaoHenrique/eleitor/eleicao.c:28:28: error: expected ‘;’ before ‘}’ token
   28 |             CriaCandidato()
      |                            ^
      |                            ;
   29 |         }
      |         ~                   
Resultados/JoaoHenrique/eleitor/eleicao.c:20:69: warning: unused variable ‘totalEleitores’ [-Wunused-variable]
   20 |     int qntCandidatos, totalPresidentes = 0, totalGovernadores = 0, totalEleitores = 0;
      |                                                                     ^~~~~~~~~~~~~~
Resultados/JoaoHenrique/eleitor/eleicao.c:20:46: warning: unused variable ‘totalGovernadores’ [-Wunused-variable]
   20 |     int qntCandidatos, totalPresidentes = 0, totalGovernadores = 0, totalEleitores = 0;
      |                                              ^~~~~~~~~~~~~~~~~
Resultados/JoaoHenrique/eleitor/eleicao.c:20:24: warning: unused variable ‘totalPresidentes’ [-Wunused-variable]
   20 |     int qntCandidatos, totalPresidentes = 0, totalGovernadores = 0, totalEleitores = 0;
      |                        ^~~~~~~~~~~~~~~~
Resultados/JoaoHenrique/eleitor/eleicao.c: In function ‘ImprimeResultadoEleicao’:
Resultados/JoaoHenrique/eleitor/eleicao.c:60:22: error: ‘candidato’ undeclared (first use in this function); did you mean ‘tCandidato’?
   60 |     ImprimeCandidato(candidato, porcentagem);
      |                      ^~~~~~~~~
      |                      tCandidato
Resultados/JoaoHenrique/eleitor/eleicao.c:60:22: note: each undeclared identifier is reported only once for each function it appears in
Resultados/JoaoHenrique/eleitor/eleicao.c:60:33: error: ‘porcentagem’ undeclared (first use in this function)
   60 |     ImprimeCandidato(candidato, porcentagem);
      |                                 ^~~~~~~~~~~
Resultados/JoaoHenrique/eleitor/eleicao.c:65:43: error: ‘nulos’ undeclared (first use in this function)
   65 |     printf("- NULOS E BRANCOS: %d, %d\n", nulos, brancos);
      |                                           ^~~~~
Resultados/JoaoHenrique/eleitor/eleicao.c:65:50: error: ‘brancos’ undeclared (first use in this function)
   65 |     printf("- NULOS E BRANCOS: %d, %d\n", nulos, brancos);
      |                                                  ^~~~~~~
